--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 _repo: In-Search-of-the-Castaways--Or-The-Children-of-Captain-Grant_2083
-_version: 0.1.0
+_version: 0.2.0
 alternative_title: Les enfants du capitaine Grant. English
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Verne, Jules
@@ -26,6 +29,8 @@ description: "In Search of the Castaways (French: Les Enfants du capitaine Grant
   \ another edition has the overall title \"Captain Grant's Children\" and has two\
   \ volumes subtitled \"The Mysterious Document\" and \"Among the Cannibals\".)\n\
   \ From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2083#In-Search-of-the-Castaways--Or-The-Children-of-Captain-Grant
 gutenberg_issued: '2000-02-01'
 gutenberg_type: Text
 identifiers:
